# collaboratorium

./: .gitignore  Dockerfile  NEXTCLOUD_IMPLEMENTATION.md  NEXTCLOUD_QUICKSTART.md  NEXTCLOUD_README.md  NGINX_SETUP.md  TODO.md  config.yaml  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
assets/: custom.css
collaboratorium/: admin_routes.py  analytics.py  auth.py  component_factory.py  dashboard_data.py  db.py  form_gen.py  graph_view.py  main.py  nextcloud_integration.py  report_generator.py
collaboratorium/tools/: analysis_report.py
collaboratorium/views/: data_pipeline.py  tab_dashboard.py  tab_graph.py  tab_report.py  tab_spreadsheet.py  view_layout.py
docs/: NEXTCLOUD_ARCHITECTURE.md  NEXTCLOUD_CODE_EXAMPLES.md  demo_notes_graph_filters_and_views.md  graph_filters_and_views.md  nextcloud_integration.md
nextcloud_hooks/: README.md
nextcloud_hooks/post-init.d/: 10-enable-groupfolders.sh  15-configure-collabora.sh
nginx/: collabora.conf.template  dash.conf.template  default.conf.template  nextcloud.conf.template  root.conf.template
tests/: conftest.py  test_clear_filter.py  test_dashboard.py  test_db.py  test_forms.py  test_spreadsheet.py
