[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "collaboratorium"
version = "0.1.0"
description = "An environment for collaborative innovation"
dependencies = [] # Relying on your existing requirements.txt

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["collaboratorium"]